# fog

./: .gitignore  AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  LICENSE  MEMORY.md  README.md  SOUL.md  TOOLS.md  USER.md
.openclaw/: workspace-state.json
agents/: fog-agent.py  fog_agent.py  reach-agent.py  runner.py
agents/sentry/: AGENT.md  register.sh  sentry.py
agents/sentry/events/: 2026-04-17.jsonl
agents/watchman/: AGENT.md  watchman.py
data/credentials/: telegram.token
data/fog/: fog-report.json  latest-summary.txt  mesh-snapshot.json
dynamics/: session.py
elixir/: mix.exs
elixir/lib/: fog.ex
elixir/lib/fog/: delta.ex  gap.ex  map.ex  mesh.ex  seam.ex
elixir/lib/fog/detect/: arbitrage.ex
fog/: __init__.py
fog/core/: delta.py  map.py  seam.py
fog/detect/: arbitrage.py
fog/mesh/: __init__.py
haskell/: fog.cabal
haskell/src/Fog/: Delta.hs  Gap.hs  Map.hs  Mesh.hs  Seam.hs
haskell/src/Fog/Detect/: Arbitrage.hs
memory/: 2026-04-17.md  terrain-delta.md  void-state.md
memory/entities/: eddie.md  hal.md  sophia.md  stella.md
scripts/: agent-register.sh  discover.sh  fog-integration.py  fog-watch.py  reach-scan.py  reach_scan.py
